--- a/web.config
+++ b/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="D:\Core Project\MetaModelCoreApp\bin\Debug\netcoreapp3.1\MetaModelCoreApp.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="E:\MetaModel\MetaModelCoreApp\bin\Debug\netcoreapp3.1\MetaModelCoreApp.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
         </environmentVariables>
