--- a/MetaModelCoreApp.csproj
+++ b/MetaModelCoreApp.csproj
@@ -21,6 +21,10 @@
     <PackageReference Include="ReflectionIT.Mvc.Paging" Version="4.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\leaflet\" />
+  </ItemGroup>
+
 
 
 </Project>
